# PureTrans

./: .gitignore  AGENTS.md
backend/: .env.example  .env.production.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: auth.py  health.py  translation.py
backend/app/core/: config.py  errors.py  security.py
backend/app/schemas/: api.py  auth.py  translation.py
backend/app/services/: check_service.py  dify_client.py  dify_utils.py  translation_service.py  wechat_auth_service.py  wechat_client.py
backend/tests/: conftest.py  test_auth_api.py  test_check.py  test_compare.py  test_health.py  test_json_cleaner.py  test_translate_direct.py  test_translate_errors.py  test_translate_kb.py
deploy/: puretrans-backend.service.example  puretrans-web-frontend.service.example
docs/deploy/: backend-systemd-experience.md  public-backend-wechat-login.md  web-frontend-nginx-experience.md  web-frontend-systemd.md
frontend/: .env.production.example  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/android/: build.gradle  capacitor.settings.gradle
frontend/android/app/: build.gradle  capacitor.build.gradle
frontend/src/: App.vue
frontend/src/styles/: tailwind.css
scripts/: deploy-web-frontend.sh
web-frontend/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
web-frontend/src/: App.tsx  main.tsx
(+44 files in other folders)
